create .mavenrc to get rid of messages about illegal reflective access